--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -10,6 +10,13 @@
     list-style: none;
 }
 
+.unselect {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .j-sort,
 .j-filter {
     display: inline-block;
@@ -38,17 +45,18 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    max-height: 200px;
+    max-height: 100px;
     overflow-y: auto;
 }
 
-.j-item {
-}
+.j-item {}
+
 .j-label {
     display: block;
     text-align: start;
     padding-inline: 0.3rem;
 }
+
 .j-check {
     margin-inline-end: 0.3rem;
 }
