--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -15,6 +15,8 @@
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    width: 80vw;
+    margin-inline: auto;
 }
 
 .j-sort,
